--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <ul class="nav nav-tabs" id="feedTabs" ">
       <li class="nav-item">
         <button
-          class="nav-link"
+          class="nav-link active
           id="grid-tab"
           data-bs-toggle="tab"
           data-bs-target="#grid"
